tests/negative/semantic/wrong_arg_count_replace/input.ci
void main() {
    print(toString(replace("a", "b")) + "\n");
}
